--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,12 @@
         "php": "^7.2.5",
         "edujugon/laradoo": "^3.0",
         "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^1.0",
+        "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "^7.0",
-        "laravel/scout": "^8.1",
-        "laravel/tinker": "^2.0"
+        "laravel/framework": "^7.24",
+        "laravel/telescope": "^3.5",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.2"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
